generator: fix header visibility

--- a/src/scss/sites/generator.scss
+++ b/src/scss/sites/generator.scss
@@ -84,7 +84,6 @@
 
 .generator {
   header {
-    display: none;
     align-items: center;
     min-height: 2em;
     width: 100%;
